# expert-robot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: cli.py  config.py  predict.py
src/data/: legiscan_client.py  ohio_loader.py  schema.py
src/features/: bill_features.py  build_features.py  committee_features.py  session_features.py  sponsor_features.py
src/models/: evaluate.py  passage_model.py
tests/: test_features.py  test_legiscan_client.py  test_model.py
